[[bin]]
name = "thres"
path = "src/main.rs"

[package]
name = "dbg"
edition = "2018"
version="0.0.2"

[dependencies]
hbbft={package = "hbbft",path="../../hbbft"}
hex="0.3.0"
bincode = "1.1.2"
byteorder = "1.3.1"
derivative = "1.0.2"
env_logger = "0.6.1"
failure = "0.1.5"
hex_fmt = "0.3"
init_with = "1.1.0"
log = "0.4.6"
rand = "0.6.5"
rand_derive = "0.5.0"
reed-solomon-erasure = "3.1.1"
serde = { version = "1.0.89", features = ["derive"] }
pairing = { version = "0.14.2", features = ["u128-support"] }
threshold_crypto = "0.3.1"
tiny-keccak = "1.4"
hb = {package = "substrate-badger-mushroom",path="../core/hbbft"}
