[package]
name = "substrate-keygen"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
fork-tree = { path = "../../utils/fork-tree" }
futures = "0.1"
futures03 = { package = "futures", version = "=0.3.1", features = ["compat"] }
log = "0.4"
parking_lot = "0.9.0"
tokio-executor = "0.1.8"
tokio-timer = "0.2.11"
rand = "0.6"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
sp-runtime = {  path = "../../primitives/runtime" }
consensus_common = { package = "sp-consensus", path = "../../primitives/consensus/common" }
primitives = { package = "sp-core",  path = "../../primitives/core" }
substrate-telemetry = { package = "sc-telemetry",path = "../telemetry" }
keystore = { package = "sc-keystore", path = "../keystore" }
serde_json = "1.0"
client = { package = "sc-client", path = "../" }
inherents = { package = "sp-inherents", path = "../../primitives/inherents" }
network = { package = "sc-network", path = "../network", features=["upgraded"] }
service = { package = "sc-service", path = "../service", optional = true }
srml-finality-tracker = {package = "pallet-finality-tracker", path = "../../frame/finality-tracker" }
futures-timer = "0.4"
mpe-primitives = { package = "substrate-mpecdsa-primitives", path = "../../primitives/keygen" }
serde = "1.0"
multihash = { package = "parity-multihash", version = "0.1" }
multi-party-ecdsa = { package = "multi-party-ecdsa", git = "https://github.com/kigawas/multi-party-ecdsa", branch = "fix-nightly"}
sp-blockchain = { package = "sp-blockchain", path = "../../primitives/blockchain" }
sp-api = { package = "sp-api", path = "../../primitives/api" }
sc-api={ package = "sc-client-api", path = "../api" }

tokio02 = { package = "tokio", version = "0.2.0-alpha.5"}

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features =  ["ec_secp256k1"]

[dev-dependencies]
network = { package = "sc-network", path = "../network", features = ["test-helpers"] }
keyring = { package = "sp-keyring", path = "../../primitives/keyring" }
test-client = { package = "substrate-test-runtime-client", path = "../../test-utils/runtime/client"}
babe_primitives = { package = "sp-consensus-babe", path = "../../primitives/consensus/babe/" }
env_logger = "0.6"
tokio = "0.1.22"
tempfile = "3.1"


[features]
default = ["service-integration"]
service-integration = ["service"]
