[package]
name = "sc-mpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# 3rd party
futures01 = { package = "futures", version = "0.1" }
futures = { version = "0.3.1", features = ["compat"]}
log = "0.4"

# primitives
sp-core = { path = "../../primitives/core" }
sp-io = { path = "../../primitives/io" }
sp-runtime = { path = "../../primitives/runtime"}
sp-offchain = { path = "../../primitives/offchain"}
sp-blockchain = { path = "../../primitives/blockchain" }
sp-application-crypto = { path = "../../primitives/application-crypto"}
sp-mpc = { path = "../../primitives/mpc" }

# client
sc-client-api = { path = "../api" }
sc-client = { path = "../" }
sc-network = { path = "../network" }
