[package]
name = "sc-peerid-wrapper"
version = "2.0.0"
authors = ["These"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
derive_more = { version = "0.99.2" }
serde = { version = "1.0.102", features = ["derive"],optional=true }
network = { package = "sc-network", path = "../network" }
rand = "0.6"

[features]
default = ["std"]
std = [
	"serde",
]
