[package]
name = "substrate-badger-mushroom"
version = "2.0.0"
authors = ["Not me"]
edition = "2018"

[dependencies]
futures-timer = "0.4.0"
bytes = "0.4.12"
unsigned-varint = { version = "0.2.2", features = ["codec"] }
fork-tree = { path = "../../core/utils/fork-tree" }
futures03 = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"] }
log = "0.4"
parking_lot = "0.9.0"
tokio-executor = "0.1.7"
tokio-timer = "0.2.11"
rand = "0.6"
hex_fmt = "0.3.0"
threshold_crypto = {  git = "https://github.com/poanetwork/threshold_crypto", features = ["codec-support"], rev = "624eeee", default-features = false }
parity-codec = { package = "parity-scale-codec", version = "1.0.6", features = ["derive"] }
runtime_primitives = { package = "sr-primitives", path = "../sr-primitives" }
consensus_common = { package = "substrate-consensus-common", path = "../consensus/common" }
substrate-primitives = { path = "../primitives" }
substrate-telemetry = { path = "../telemetry" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
client = { package = "substrate-client", path = "../client" }
inherents = { package = "substrate-inherents", path = "../../core/inherents" }
network = { package = "substrate-network", path = "../network", features = ["upgraded"] }
keystore = { package = "substrate-keystore", path = "../keystore" }
service = { package = "substrate-service", path = "../service", optional = true }
srml-finality-tracker = { path = "../../srml/finality-tracker" }
badger_primitives = { package = "substrate-badger-primitives", path = "primitives" }
hex = "0.3.2"
badger = { package = "hbbft", path="../../../hbbft" }
bincode = "1.2.0"
transaction_pool = { package = "substrate-transaction-pool", path = "../../core/transaction-pool" }
num = { package = "num-traits", version = "0.2", default-features = false }
srml-timestamp = { path = "../../srml/timestamp" }
serde_bytes = "0.11"
derive_more = "0.15"

[dev-dependencies]
network = { package = "substrate-network", path = "../network", features = ["test-helpers"] }
keyring = { package = "substrate-keyring", path = "../keyring" }
test-client = { package = "substrate-test-runtime-client", path = "../test-runtime/client"}
env_logger = "0.6"
tokio = "0.1.17"
