[package]
name = "substrate-keygen"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hbbft = "0.1"
crossbeam = "0.7"
fork-tree = { path = "../../core/utils/fork-tree" }
futures = "0.1"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.17", features = ["compat"] }
log = "0.4"
parking_lot = "0.8.0"
tokio-executor = "0.1.7"
rand = "0.6.5"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
multihash = { package="parity-multihash",  version = "0.1.3"}
runtime_primitives = { package = "sr-primitives", path = "../sr-primitives" }
consensus_common = { package = "substrate-consensus-common", path = "../consensus/common" }
substrate-primitives = { path = "../primitives" }
substrate-telemetry = { path = "../telemetry" }
serde = "1.0"
bincode = "1.1"
client = { package = "substrate-client", path = "../client" }
inherents = { package = "substrate-inherents", path = "../../core/inherents" }
network = { package = "substrate-network", path = "../network" }
service = { package = "substrate-service", path = "../service", optional = true }
srml-finality-tracker = { path = "../../srml/finality-tracker" }
hbbft-primitives = { package = "substrate-hbbft-primitives", path = "primitives" }
tokio-timer = "0.2.11"

[dev-dependencies]
network = { package = "substrate-network", path = "../network", features = ["test-helpers"] }
keyring = { package = "substrate-keyring", path = "../keyring" }
test-client = { package = "substrate-test-runtime-client", path = "../test-runtime/client"}
env_logger = "0.6"
tokio = "0.1.17"

[features]
default = ["service-integration"]
service-integration = ["service"]
