[package]
name = "substrate-keygen"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
fork-tree = { path = "../../core/utils/fork-tree" }
futures = "0.1"
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.19", features = ["compat"] }
log = "0.4"
parking_lot = "0.9.0"
tokio-executor = "0.1.8"
tokio-timer = "0.2.11"
rand = "0.6"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
sr-primitives = {  path = "../sr-primitives" }
consensus_common = { package = "substrate-consensus-common", path = "../consensus/common" }
primitives = { package = "substrate-primitives",  path = "../primitives" }
substrate-telemetry = { path = "../telemetry" }
keystore = { package = "substrate-keystore", path = "../keystore" }
serde_json = "1.0"
client = { package = "substrate-client", path = "../client" }
inherents = { package = "substrate-inherents", path = "../../core/inherents" }
network = { package = "substrate-network", path = "../network" }
srml-finality-tracker = { path = "../../srml/finality-tracker" }

mpe-primitives = { package = "substrate-mpecdsa-primitives", path = "primitives" }
serde = "1.0"
multihash = { package = "parity-multihash", version = "0.1" }
multi-party-ecdsa = { package = "multi-party-ecdsa", git = "https://github.com/kigawas/multi-party-ecdsa", branch = "keygen-clippy"}

tokio02 = { package = "tokio", version = "0.2.0-alpha.5"}

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features =  ["ec_secp256k1"]

[dev-dependencies]
network = { package = "substrate-network", path = "../network", features = ["test-helpers"] }
keyring = { package = "substrate-keyring", path = "../keyring" }
test-client = { package = "substrate-test-runtime-client", path = "../test-runtime/client"}
babe_primitives = { package = "substrate-consensus-babe-primitives", path = "../consensus/babe/primitives" }
env_logger = "0.6"
tokio = "0.1.22"
tempfile = "3.1"
