[package]
name = "substrate-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rustc-hex = { version = "2.0.1", default-features = false }
log = { version = "0.4.8", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
twox-hash = { version = "1.5.0", optional = true }
byteorder = { version = "1.3.2", default-features = false }
primitive-types = { version = "0.5.1", default-features = false, features = ["codec"] }
impl-serde = { version = "0.2.1", optional = true }
wasmi = { version = "0.5.1", optional = true }
hash-db = { version = "0.15.2", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
ed25519-dalek = { version = "0.9.1", optional = true }
base58 = { version = "0.1.0", optional = true }
blake2-rfc = { version = "0.2.18", optional = true }
schnorrkel = { version = "0.8.5", features = ["preaudit_deprecated"], optional = true }
rand = { version = "0.7.2", optional = true }
rand_old = {package="rand", version = "0.6.5", optional = true }
sha2 = { version = "0.8.0", optional = true }
substrate-bip39 = { version = "0.3.1", optional = true }
tiny-bip39 = { version = "0.6.2", optional = true }
hex = { version = "0.3.2", optional = true }
regex = { version = "1.3.1", optional = true }
num-traits = { version = "0.2.8", default-features = false }
zeroize = "0.10.1"
lazy_static = { version = "1.4.0", optional = true }
parking_lot = { version = "0.9.0", optional = true }
threshold_crypto =  { version = "0.3.2", optional=true }
pairing = { version = "0.14.2", features = ["u128-support"],optional=true }
rand04_compat = { version = "0.1.1", optional=true }
rand_chacha = { version =  "0.1.1", optional=true }
pbkdf2 = { version = "0.3.0", default-features = false,optional=true  }
badger = { package= "hbbft", path="../../../hbbft", optional=true }
bincode = { version = "1.0.1", optional=true}
curv = {git = "https://github.com/KZen-networks/curv", tag = "v0.2.2", features =  ["ec_secp256k1","rust-gmp"], optional=true }
multi-party-ecdsa = { package = "multi-party-ecdsa", git = "https://github.com/kigawas/multi-party-ecdsa", branch = "keygen-clippy",optional=true}
secp256k1 = {version="0.15.5",optional=true}
substrate-debug-derive = { version = "2.0.0", path = "./debug-derive" }
externalities = { package = "substrate-externalities", path = "../externalities", optional = true }
primitives-storage = { package = "substrate-primitives-storage", path = "storage", default-features = false }


hmac = { version = "0.7.1",optional=true}
[dev-dependencies]
substrate-serializer = { path = "../serializer" }
pretty_assertions = "0.6.1"
hex-literal = "0.2.1"

criterion = "0.2.11"

[[bench]]
name = "benches"
harness = false

[lib]
bench = false

[features]
default = ["std"]
std = [

	"log/std",
	"pbkdf2",
	"bincode",
	"hmac",
	"curv",
	"secp256k1",
	"threshold_crypto",
	"multi-party-ecdsa",
	"badger",
	"pairing",
	"rand_chacha",
	"rand04_compat",
	"wasmi",
	"lazy_static",
	"parking_lot",
	"primitive-types/std",
	"primitive-types/serde",
	"primitive-types/byteorder",
	"primitive-types/rustc-hex",
	"primitive-types/libc",
	"impl-serde",
	"codec/std",
	"hash256-std-hasher/std",
	"hash-db/std",
	"rstd/std",
	"serde",
	"rustc-hex/std",
	"twox-hash",
	"blake2-rfc",
	"ed25519-dalek",
	"hex",
	"base58",
	"substrate-bip39",
	"tiny-bip39",
	"serde",
	"byteorder/std",
	"rand",
	"rand_old",
	"sha2",
	"schnorrkel",
	"regex",
	"num-traits/std",
	"substrate-debug-derive/std",
	"externalities",
	"primitives-storage/std",
]
