[package]
name = "pallet-badger"
version = "2.0.0"
authors = ["Not parity technologies"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
primitives = { package = "sp-core",  path = "../../primitives/core", default-features = false }
badger-primitives= { package="substrate-badger-primitives",path = "../../primitives/hbbft", default-features = false }
rstd = { package = "sp-std", path = "../../primitives/sr-std", default-features = false }
runtime_io = { package = "sp-io", path = "../../primitives/sr-io", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
frame-support = { path = "../support", default-features = false }
system = { package = "frame-system", path = "../system", default-features = false }
session = { package = "pallet-session", path = "../session", default-features = false }
finality-tracker = { package = "pallet-finality-tracker", path = "../finality-tracker", default-features = false }
app-crypto = { package = "sc-application-crypto", path = "../../primitives/application-crypto", default-features = false }


[dev-dependencies]
runtime_io = { package = "sp-io", path = "../../primitives/sr-io" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"primitives/std",
	"badger-primitives/std",
	"rstd/std",
	"frame-support/std",
	"sp-runtime/std",
	"system/std",
	"session/std",
	"finality-tracker/std",
	"app-crypto/std"
]
