[package]
name = "pallet-mpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
rstd = { package = "sp-std", path = "../../primitives/sr-std", default-features = false }
runtime-io = { package = "sp-io", path = "../../primitives/sr-io", default-features = false }
sp-runtime = { path = "../../primitives/sr-primitives", default-features = false }
primitives = { package = "sp-core", path = "../../primitives/core" }
support = { package = "frame-support", path = "../support", default-features = false }
system = { package = "frame-system", path = "../system", default-features = false }
sp-mpc = { path = "../../primitives/mpc", default-features = false }


[dev-dependencies]
timestamp = { package = "pallet-timestamp", path = "../timestamp" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "runtime-io/std",
    "sp-runtime/std",
    "support/std",
    "system/std",
 ]
