[package]
name = "hb-node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"


[dependencies]
client = { package = "substrate-client", path = "../../core/client" }
jsonrpc-core = "14.0.3"
hb-node-primitives = { path = "../primitives" }
hb-node-runtime = { path = "../runtime" }
sr-primitives = { path = "../../core/sr-primitives" }
srml-contracts-rpc = { path = "../../srml/contracts/rpc/" }
srml-transaction-payment-rpc = { path = "../../srml/transaction-payment/rpc/" }
srml-system-rpc = { path = "../../srml/system/rpc/" }
transaction_pool = { package = "substrate-transaction-pool", path = "../../core/transaction-pool" }
badger = { package = "substrate-badger-mushroom", path = "../../core/hbbft" }
keystore = { package = "substrate-keystore", path = "../../core/keystore" }